--- a/src/HttpResolver/wrap/CMakeLists.txt
+++ b/src/HttpResolver/wrap/CMakeLists.txt
@@ -13,13 +13,15 @@ add_library(${AR_HTTPRESOLVER_TARGET_LIB}
 #set_boost_namespace(${AR_HTTPRESOLVER_TARGET_LIB})
 # Libs
 target_link_libraries(${AR_HTTPRESOLVER_TARGET_LIB}
-    ${AR_PXR_LIB_PREFIX}arch
-    ${AR_PXR_LIB_PREFIX}tf
-    ${AR_PXR_LIB_PREFIX}gf
-    ${AR_PXR_LIB_PREFIX}vt
-    ${AR_PXR_LIB_PREFIX}ar
-    ${AR_PXR_LIB_PREFIX}sdf
-    ${AR_BOOST_PYTHON_LIB}
+${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}arch.${AR_LIB_EXT}
+${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}tf.${AR_LIB_EXT}
+${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}gf.${AR_LIB_EXT}
+${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}vt.${AR_LIB_EXT}
+${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}ar.${AR_LIB_EXT}
+${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}sdf.${AR_LIB_EXT}
+${AR_PXR_LIB_DIR}/tbb.${AR_LIB_EXT}
+${AR_BOOST_PYTHON_LIB}.${AR_LIB_EXT}
+${AR_PYTHON_LIB}.${AR_LIB_EXT}
 )
 # Headers
 target_include_directories(${AR_HTTPRESOLVER_TARGET_LIB}
