resolver update to use provided path without modification

--- a/src/FileResolver/CMakeLists.txt
+++ b/src/FileResolver/CMakeLists.txt
@@ -25,6 +25,7 @@ target_link_libraries(${AR_FILERESOLVER_TARGET_LIB}
     ${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}vt.${AR_LIB_EXT}
     ${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}ar.${AR_LIB_EXT}
     ${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}sdf.${AR_LIB_EXT}
+    ${AR_PXR_LIB_DIR}/${AR_PXR_LIB_PREFIX}js.${AR_LIB_EXT}
     ${AR_PXR_LIB_DIR}/tbb.${AR_LIB_EXT}
     ${AR_BOOST_PYTHON_LIB}.${AR_LIB_EXT}
     ${AR_PYTHON_LIB}.${AR_LIB_EXT}
